--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-  <h1>All About Me - MY NAME</h1>
+  <h1>All About Me - Susana Hernandez</h1>
   
-  <p>I prefer to be called XXXXX </p>
-  <p>I was born in XXXXX </p>
-  <p>The last thing I ate was XXXXX </p>
+  <p>I prefer to be called Susana </p>
+  <p>I was born in Queens, NY </p>
+  <p>The last thing I ate was strawberries </p>
 
 </body>
 
